added task files

--- a/.gitignore
+++ b/.gitignore
@@ -214,4 +214,4 @@ Task Two/lstm_sherlock_model.pth
 Task Two/Week2.pdf
 Task Two/24AI06014_Task_2.zip
 
-Task Three/task_one_copy.ipynb
+Task Three/task_one copy.ipynb
